Fix mobile responsive: black hamburger, reduce footer link gaps

--- a/public/score.css
+++ b/public/score.css
@@ -193,14 +193,14 @@ html, body {
 
 .hamburger span {
     display: block;
-    width: 15px;
-    height: 1px;
+    width: 25px;
+    height: 2px;
     background-color: #000;
     margin: 5px 0;
-    transition: all 0.3s ease-in-out; /* Smooth animation */
+    transition: all 0.3s ease-in-out;
 }
 .hamburger span:hover{
-  background-color:  rgb(200, 7, 7);
+  background-color: rgb(200, 7, 7);
 }
 
 .searchbar {
@@ -290,7 +290,7 @@ html, body {
     width: 100%;
     height: 100%;
     display: flex;
-    gap: 60px;
+    gap: 30px;
     margin-left: 0;
     justify-content: center;
     flex-wrap: wrap;
@@ -361,7 +361,7 @@ html, body {
       justify-content: end;
     }
     .hamburger span{
-      background-color: white;
+      background-color: #000;
 
     }
     .hamburger span:hover{
@@ -422,6 +422,7 @@ html, body {
     .middle-links3 {
       flex-direction: column;
       align-items: center;
+      gap: 15px;
     }
     .dropdown-item a{
       color: #000;
